# tasbot_obs_autoswitcher

./: .gitignore  README.md  agdq2024.py  config.py  main.py  pyproject.toml  timer.py  workers.py
mock_tracker/: kill  main.py  save  start_mock_tracker.sh
mock_tracker/db/: kill.json  save.json
mock_tracker/static/css/: tasbot_autoswitcher.css
mock_tracker/templates/: base.html  controller.html
